--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
       
       body {
           /* background: rgb(4, 5, 5); */
-          background: rgb(244, 254, 255);
+          background: rgb(255,255,51);
       }
 
       /* navigation bar */
@@ -194,14 +194,16 @@ li.move-right{
       
       .intro-text h1 {
           font-size: 70px;
-          color: rgb(43, 4, 77);
+          color: rgb(0,191,255);
           font-weight: 500;
+          font-family:cursive
       }
       
       .intro-text p {
           color: rgb(137, 148, 164);
           margin-top: 5px;
           font-size: 22px;
+          font-family:cursive
       }
       
       .cover {
@@ -228,18 +230,19 @@ li.move-right{
         height: 50px;
         cursor: pointer;
         border: none;
-        border-radius: 60px;
-        font-size: 20px;
+        border-radius: 50px;
+        font-size: 25px;
         border: 3px solid rgb(43, 4, 77);
+        box-shadow: 3px solid red;
         transition: 0.9s ease;
         /* animation: animate 4s ease-in-out infinite; */
 
       }
       .cta .cta-select:hover{
-        background: #2b044d;
+        background: rgb(0,0,255);
         color: #fff;
 
-        border: 3px solid rgb(248, 246, 250);
+        border: 3px solid rgb(255,0,0);
        
     /* animation: animate 4s ease-in-out infinite; */
 
@@ -321,9 +324,9 @@ li.move-right{
         padding: 8px;
     }
       .service .content .fa-check-square {
-        color: #c94cd8;
+        color: #0000FF;
         font-size: 22px;
-        margin-right: 25px;
+        margin-right: 10px;
     }
     .service .content .second{
         /* margin-left: 170px; */
@@ -500,7 +503,7 @@ li.move-right{
         }
         
         .android-btn {
-            width: 240px;
+            width: 200px;
             padding: 13px 17px 13px 0px;
             color: #999;
         }
